[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/game/entities/player-rigid/states/DeadState.gd" type="Script" id=1]
[ext_resource path="res://src/game/entities/player-rigid/states/WallSlideState.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/player/player-spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/player/player_idle_body_color.png" type="Texture" id=4]
[ext_resource path="res://src/game/entities/player-rigid/states/IdleState.gd" type="Script" id=5]
[ext_resource path="res://src/game/entities/player-rigid/PlayerRigid.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/player-rigid/PlayerRigidStateMachine.gd" type="Script" id=7]
[ext_resource path="res://src/game/entities/player-rigid/states/WalkState.gd" type="Script" id=8]
[ext_resource path="res://src/game/entities/player-rigid/states/JumpState.gd" type="Script" id=9]
[ext_resource path="res://assets/textures/player/player_ghost.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/player/player_ghost_body_color.png" type="Texture" id=11]
[ext_resource path="res://src/game/partials/Actionable.gd" type="Script" id=12]
[ext_resource path="res://assets/textures/player/player_action_alert.png" type="Texture" id=13]

[sub_resource type="PhysicsMaterial" id=9]
friction = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.5, 9 )

[sub_resource type="RayShape2D" id=6]
length = 4.0

[sub_resource type="RayShape2D" id=7]
length = 4.0

[sub_resource type="RayShape2D" id=8]
length = 4.0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "action"
length = 0.32
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44 ]
}

[sub_resource type="Animation" id=13]
resource_name = "enter"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=14]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=16]
resource_name = "slide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=17]
resource_name = "spin"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=15]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 12.0

[node name="Player" type="RigidBody2D"]
collision_layer = 25
collision_mask = 0
mode = 2
mass = 50.0
physics_material_override = SubResource( 9 )
gravity_scale = 9.0
script = ExtResource( 6 )
gravity = 1

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Jump"), NodePath("Dead"), NodePath("WallSlide") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
state_id = "walk"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_id = "jump"

[node name="StartingTimer" type="Timer" parent="StateMachine/Jump"]
wait_time = 0.1
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
state_id = "dead"

[node name="WallSlide" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
state_id = "wall_slide"

[node name="DetachTimer" type="Timer" parent="StateMachine/WallSlide"]
wait_time = 0.3
one_shot = true

[node name="CollisionCore" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -11 )
shape = SubResource( 5 )

[node name="CollisionBottom1" type="CollisionShape2D" parent="."]
position = Vector2( -7, -4 )
shape = SubResource( 6 )

[node name="CollisionBottom2" type="CollisionShape2D" parent="."]
position = Vector2( 6, -4 )
shape = SubResource( 6 )

[node name="CollisionRight1" type="CollisionShape2D" parent="."]
position = Vector2( 4, -2 )
rotation = -1.5708
shape = SubResource( 7 )

[node name="CollisionRight2" type="CollisionShape2D" parent="."]
position = Vector2( 4, -18 )
rotation = -1.5708
shape = SubResource( 7 )

[node name="CollisionLeft1" type="CollisionShape2D" parent="."]
position = Vector2( -5, -18 )
rotation = -4.71239
shape = SubResource( 8 )

[node name="CollisionLeft2" type="CollisionShape2D" parent="."]
position = Vector2( -5, -2 )
rotation = -4.71239
shape = SubResource( 8 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 0, -1 )
cast_to = Vector2( 0, 1 )
collision_mask = 14

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -7, -1 )
cast_to = Vector2( 0, 1 )
collision_mask = 14

[node name="RayCast2D3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 5, -1 )
cast_to = Vector2( 0, 1 )
collision_mask = 14

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../BodyPivot")
anims/RESET = SubResource( 11 )
anims/action = SubResource( 12 )
anims/enter = SubResource( 13 )
anims/idle = SubResource( 10 )
anims/jump = SubResource( 14 )
anims/slide = SubResource( 16 )
anims/spin = SubResource( 17 )
anims/walk = SubResource( 15 )

[node name="BodyPivot" type="Node2D" parent="."]

[node name="ColorSprite" type="Sprite" parent="BodyPivot"]
position = Vector2( 0, -21 )
texture = ExtResource( 4 )

[node name="BodySprite" type="Sprite" parent="BodyPivot"]
unique_name_in_owner = true
position = Vector2( -1, -19 )
texture = ExtResource( 3 )
hframes = 8
vframes = 7

[node name="ActionAlert" type="Sprite" parent="BodyPivot"]
position = Vector2( 0, -21 )
z_index = 1
texture = ExtResource( 13 )

[node name="GhostBody" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )

[node name="ColorSprite" type="Sprite" parent="GhostBody"]
position = Vector2( 0, -21 )
texture = ExtResource( 11 )

[node name="BodySprite" type="Sprite" parent="GhostBody"]
position = Vector2( 0, -21 )
texture = ExtResource( 10 )

[node name="WallRaycast" type="Node2D" parent="."]

[node name="LeftRayCast2D" type="RayCast2D" parent="WallRaycast"]
position = Vector2( -7, -14 )
cast_to = Vector2( -3, 0 )
collision_mask = 4

[node name="RightRayCast2D" type="RayCast2D" parent="WallRaycast"]
position = Vector2( 6, -14 )
cast_to = Vector2( 3, 0 )
collision_mask = 4

[node name="RespawnActionable" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitorable = false
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnActionable"]
position = Vector2( 0, -21 )
shape = SubResource( 2 )

[node name="ActionableFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
position = Vector2( -2, -20 )
shape = SubResource( 3 )

[node name="PickPosition" type="Position2D" parent="."]
position = Vector2( 0, -14 )

[connection signal="dead" from="." to="StateMachine" method="_on_Player_dead"]
[connection signal="nearest_actionable_changed" from="." to="." method="_on_Player_nearest_actionable_changed"]
[connection signal="timeout" from="StateMachine/WallSlide/DetachTimer" to="StateMachine/WallSlide" method="_on_DetachTimer_timeout"]
[connection signal="animation_finished" from="BodyAnimations" to="." method="_on_animation_finished"]
[connection signal="actioned" from="RespawnActionable" to="StateMachine/Dead" method="_on_RespawnActionable_actioned"]
